--- a/src/reddit-api/package.json
+++ b/src/reddit-api/package.json
@@ -13,6 +13,7 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
+    "amqplib": "^0.10.9",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
