add postgres, app settings, start program.cs

--- a/src/analytics-service/AnalyticsService/AnalyticsService/appsettings.json
+++ b/src/analytics-service/AnalyticsService/AnalyticsService/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "ConnectionStrings": {
+    "AnalyticsDb": "Host=postgres;Port=5432;Database=analytics;Username=postgres;Password=postgres"
+  },
+  "RabbitMq": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "docker",
+    "Password": "docker",
+    "VirtualHost": "/",
+    "QueueName": "reddit_queue",
+    "PrefetchCount": 50
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
