--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,23 @@ services:
     depends_on:
       - redis
 
+  postgres:
+    image: postgres:16
+    container_name: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: analytics
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d analytics"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+
 networks:
   default:
     name: pizzanet
@@ -43,3 +60,4 @@ networks:
 volumes:
   redis-data:
   rabbitmq-data:
+  postgres-data:
