update background service and db migrations

--- a/src/analytics-service/AnalyticsService/AnalyticsService/appsettings.Development.json
+++ b/src/analytics-service/AnalyticsService/AnalyticsService/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AnalyticsDb": "Host=localhost;Port=5432;Database=analytics;Username=postgres;Password=postgres"
   }
 }
