--- a/src/analytics-service/AnalyticsService/AnalyticsService/appsettings.json
+++ b/src/analytics-service/AnalyticsService/AnalyticsService/appsettings.json
@@ -8,7 +8,8 @@
     "UserName": "docker",
     "Password": "docker",
     "VirtualHost": "/",
-    "QueueName": "reddit_queue",
+    "RedditRandomQueue": "reddit_random_queue",
+    "RedditTopQueue": "reddit_top_queue",
     "PrefetchCount": 50
   },
   "Logging": {
